                                - AddEventToEventsExt - No need to check for EventId as we allow events to come in here that were not saved
                                                        because the animal doesn't exist in the database so push back the event as synced.

Version V5.9 R7.7

02/12/20 /MK Change - uSystem - Removed Emer Howard's phone number from Evening Support but leave Evening Support - GL request.
02/12/20 /MK Bug Fix - uUpdateTables - UpdateGenLook - Changed Foot to Hoof and fixed spelling misate of Paring - GL request.

Version V5.9 R7.6

25/11/20 /MK Change - SetupAnimals - SetMilkDiskGridDisplayColumns - Default to Cummulative Yield.
26/11/20 /MK Bug Fix - DairyData - GetUserHerdId - I moved the OwnerFile.Open in OpenAllTables up to the top as it is a primary table to open.
                                                   The reason I did this was, if the OwnerFile can't be opened (because of corruption) the user
                                                   wasn't told if the table before OwnerFile was also corrupted. Shane had a look at the change
                                                   I made and found that the setting of OwnerFile.Active to AlreadyOpen was causing other forms
                                                   that locate on the OwnerFile were getting the error "OwnerFile : Cannot perform this operation on a closed database".

Version V5.9 R7.5

20/11/20 /MK Change - uHerdSync - LocateAnimal - Search for animals In Herd first, if the animal is not in herd then use a filter for the tag number and get recent instance of animal.
                    - uNutrientProductionProjectionRptScr - If there are no Waste Productions Rates give error with info on how to enter the rates.
                                                          - HasWasteProdRates - No function to check whether the user has HasWasteProdRates to view the report.