@@ -29,6 +29,8 @@
                                                - Allow the file to be read in again and update SalesDeaths record fields.
 
    11/08/20 [V5.9 R5.3] /MK Bug Fix - When checking for the .csv in the file name allow for the uppercase version of .csv also - Denis O'Brien / CJ Meats.
+
+   04/12/20 [V5.9 R7.8] /MK Change - Added Jennings to the list of factories that a file can be requested from.   
 }
 
 unit uRemittance;
@@ -87,6 +89,7 @@ type
     SlaneyMeats1: TMenuItem;
     pmiAshbourne: TMenuItem;
     FileTimer: TTimer;
+    pmiMartinJennings: TMenuItem;
     procedure FormClose(Sender: TObject; var Action: TCloseAction);
     procedure FromEmail1Click(Sender: TObject);
     procedure FormShow(Sender: TObject);
@@ -989,10 +992,14 @@ begin
          ToAddress := 'eamon@slaney.com';
       end
    else if AMartName = iRemittanceMarts[7] then
-       begin
-          //   21/05/15 [V5.4 R7.0] /MK Additional Feature - Added Ashbourne to pmRemitMarts list - email address from emails in Anne Ryan's Gmail inbox.
-          ToAddress := 'reception@ashmeats.ie';
-       end
+      begin
+         //   21/05/15 [V5.4 R7.0] /MK Additional Feature - Added Ashbourne to pmRemitMarts list - email address from emails in Anne Ryan's Gmail inbox.
+         ToAddress := 'reception@ashmeats.ie';
+      end
+   else if AMartName = iRemittanceMarts[8] then
+      begin
+         ToAddress := 'liveStock@jenningsmeat.com';
+      end
    else
       begin
          MessageDlg('Failed to send email. An unknown email address has been specified.',mtError,[mbOk],0);
