@@ -27,6 +27,8 @@
                                                  where that file has animals that have been sold.
                                                - BuildGridFromFile/StringGrid1DblClick - Pass in form variable, FReImportFile, to CarcaseExists to allow the file to be read in again.
                                                - Allow the file to be read in again and update SalesDeaths record fields.
+
+   11/08/20 [V5.9 R5.3] /MK Bug Fix - When checking for the .csv in the file name allow for the uppercase version of .csv also - Denis O'Brien / CJ Meats.
 }
 
 unit uRemittance;
@@ -85,6 +87,7 @@ type
     SlaneyMeats1: TMenuItem;
     pmiAshbourne: TMenuItem;
     FileTimer: TTimer;
+    pmiMartinJennings: TMenuItem;
     procedure FormClose(Sender: TObject; var Action: TCloseAction);
     procedure FromEmail1Click(Sender: TObject);
     procedure FormShow(Sender: TObject);
@@ -849,7 +852,7 @@ procedure TfRemittance.sbReImportFileClick(Sender: TObject);
 begin
    try
       FReImportFile := True;
-      if ( ExtractFileExt(FFileName) = '.csv' ) then
+      if ( UpperCase(ExtractFileExt(FFileName)) = '.CSV' ) then
          begin
             ClearStringGrid;
             BuildGridFromFile(fRemittanceLoad.ProcessCSVFile(FFileName));
@@ -987,10 +990,14 @@ begin
          ToAddress := 'eamon@slaney.com';
       end
    else if AMartName = iRemittanceMarts[7] then
-       begin
-          //   21/05/15 [V5.4 R7.0] /MK Additional Feature - Added Ashbourne to pmRemitMarts list - email address from emails in Anne Ryan's Gmail inbox.
-          ToAddress := 'reception@ashmeats.ie';
-       end
+      begin
+         //   21/05/15 [V5.4 R7.0] /MK Additional Feature - Added Ashbourne to pmRemitMarts list - email address from emails in Anne Ryan's Gmail inbox.
+         ToAddress := 'reception@ashmeats.ie';
+      end
+   else if AMartName = iRemittanceMarts[8] then
+      begin
+         ToAddress := 'liveStock@jenningsmeat.com';
+      end
    else
       begin
          MessageDlg('Failed to send email. An unknown email address has been specified.',mtError,[mbOk],0);
@@ -1085,7 +1092,7 @@ begin
    FileTimer.Enabled := False;
    if ( Length(FFileName) = 0 ) then Exit;
    try
-      if ( ExtractFileExt(FFileName) = '.csv' ) then
+      if ( UpperCase(ExtractFileExt(FFileName)) = '.CSV' ) then
          begin
             ClearStringGrid;
             BuildGridFromFile(fRemittanceLoad.ProcessCSVFile(FFileName));
